--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <gson.version>2.8.6</gson.version>
         <paho.version>1.2.1</paho.version>
         <logback.version>1.0.13</logback.version>
+        <cdimascio.version>2.2.0</cdimascio.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
@@ -34,6 +35,12 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>${cdimascio.version}</version>
         </dependency>
     </dependencies>
 
