--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <java.version>1.8</java.version>
         <gson.version>2.8.6</gson.version>
         <paho.version>1.2.1</paho.version>
+        <jackson.version>2.6.3</jackson.version>
         <logback.version>1.0.13</logback.version>
         <cdimascio.version>2.2.0</cdimascio.version>
         <maven.compiler.source>17</maven.compiler.source>
@@ -41,6 +42,19 @@
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
             <version>${cdimascio.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.7.RELEASE</version>
         </dependency>
     </dependencies>
 
